<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.angus.toolkit</groupId>
	<artifactId>xliff-trans</artifactId>
	<version>0.1.1</version>
	
	<properties>
		<slf4j.version>1.7.5</slf4j.version>
		<logback.version>1.0.13</logback.version>
	</properties>
	
	<dependencies>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jcl-over-slf4j</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>${logback.version}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents.client5</groupId>
			<artifactId>httpclient5</artifactId>
			<version>5.2</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.15.2</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>8</source>
					<target>8</target>
					<compilerArgument>-Xlint:all</compilerArgument>
					<encoding>UTF-8</encoding>
					<showWarnings>true</showWarnings>
					<showDeprecation>true</showDeprecation>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.4.3</version>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<id>prepare-distribution</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>run</goal>
						</goals>
						<configuration>
							<target>
								<copy todir="${project.build.directory}">
			                        <fileset dir="src/main/resources">
			                            <include name="run*.sh" />
			                            <include name="run*.bat" />
			                        </fileset>
			                    </copy>
								<copy file="src/main/resources/prefix_promp.txt"
									todir="${project.build.directory}" />
								<copy file="src/main/resources/Config.properties"
									todir="${project.build.directory}" />
								<chmod perm="755">
			                        <fileset dir="${project.build.directory}">
			                            <include name="run*.sh" />
			                        </fileset>
			                    </chmod>
							</target>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.4</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<transformers>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>
										com.angus.xliff.swing.XliffSwingUI</mainClass>
								</transformer>
							</transformers>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<id>withJRE</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-antrun-plugin</artifactId>
						<version>3.1.0</version>
						<executions>
							<execution>
								<id>build-jre</id>
								<phase>package</phase>
								<configuration>
									<target>
										<exec
											executable="${java.home}/bin/jlink">
											<arg value="--module-path" />
											<arg value="${java.home}/jmods" />
											<arg value="--add-modules" />
											<arg value="java.base,java.desktop,jdk.accessibility,jdk.crypto.ec,java.security.sasl,java.naming" />
											<arg value="--output" />
											<arg value="${project.build.directory}/distribution/jre" />
										</exec>
									</target>
								</configuration>
								<goals>
									<goal>run</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>macos-latest</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-assembly-plugin</artifactId>
						<version>3.3.0</version>
						<configuration>
							<appendAssemblyId>false</appendAssemblyId>
						</configuration>
						<executions>
							<execution>
								<id>make-assembly-tar-gz-macos</id>
								<phase>package</phase>
								<goals>
									<goal>single</goal>
								</goals>
								<configuration>
									<formats>
										<format>tar.gz</format>
									</formats>
									<descriptors>
										<descriptor>src/assembly/tar.gz_macos.xml</descriptor>
									</descriptors>
									<finalName>${project.artifactId}-${project.version}-macos</finalName>
								</configuration>
							</execution>
							<execution>
								<id>make-assembly-tar-gz-macos-withJRE</id>
								<phase>package</phase>
								<goals>
									<goal>single</goal>
								</goals>
								<configuration>
									<formats>
										<format>tar.gz</format>
									</formats>
									<descriptors>
										<descriptor>src/assembly/tar.gz_macos_withJRE.xml</descriptor>
									</descriptors>
									<finalName>${project.artifactId}-${project.version}-macos-withJRE</finalName>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>ubuntu-latest</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-assembly-plugin</artifactId>
						<version>3.3.0</version>
						<configuration>
							<appendAssemblyId>false</appendAssemblyId>
						</configuration>
						<executions>
							<execution>
								<id>make-assembly-zip</id>
								<phase>package</phase>
								<goals>
									<goal>single</goal>
								</goals>
								<configuration>
									<formats>
										<format>zip</format>
									</formats>
									<descriptors>
										<descriptor>src/assembly/zip.xml</descriptor>
									</descriptors>
									<finalName>
										${project.artifactId}-${project.version}</finalName>
								</configuration>
							</execution>
							<execution>
								<id>make-assembly-tar-gz</id>
								<phase>package</phase>
								<goals>
									<goal>single</goal>
								</goals>
								<configuration>
									<formats>
										<format>tar.gz</format>
									</formats>
									<descriptors>
										<descriptor>src/assembly/tar.gz.xml</descriptor>
									</descriptors>
									<finalName>
										${project.artifactId}-${project.version}</finalName>
								</configuration>
							</execution>
							<execution>
								<id>make-assembly-tar-gz-withJRE</id>
								<phase>package</phase>
								<goals>
									<goal>single</goal>
								</goals>
								<configuration>
									<formats>
										<format>tar.gz</format>
									</formats>
									<descriptors>
										<descriptor>
											src/assembly/tar.gz_withJRE.xml</descriptor>
									</descriptors>
									<finalName>
										${project.artifactId}-${project.version}-ubuntu-withJRE</finalName>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>windows-latest</id>
			<build>
				<plugins>
<!--					<plugin>-->
<!--						<groupId>org.apache.maven.plugins</groupId>-->
<!--						<artifactId>maven-assembly-plugin</artifactId>-->
<!--						<version>3.3.0</version>-->
<!--						<configuration>-->
<!--							<appendAssemblyId>false</appendAssemblyId>-->
<!--						</configuration>-->
<!--						<executions>-->
<!--							<execution>-->
<!--								<id>make-assembly-tar-gz-windows-withJRE</id>-->
<!--								<phase>package</phase>-->
<!--								<goals>-->
<!--									<goal>single</goal>-->
<!--								</goals>-->
<!--								<configuration>-->
<!--									<formats>-->
<!--										<format>zip</format>-->
<!--									</formats>-->
<!--									<descriptors>-->
<!--										<descriptor>src/assembly/zip_withJRE.xml</descriptor>-->
<!--									</descriptors>-->
<!--									<finalName>${project.artifactId}-${project.version}-windows-withJRE</finalName>-->
<!--								</configuration>-->
<!--							</execution>-->
<!--						</executions>-->
<!--					</plugin>-->
					<plugin>
			          <groupId>org.codehaus.mojo</groupId>
			          <artifactId>exec-maven-plugin</artifactId>
			          <version>3.0.0</version>
			          <executions>
			            <execution>
			              <id>package-jre</id>
			              <phase>package</phase>
			              <goals>
			                <goal>exec</goal>
			              </goals>
			              <configuration>
			                <executable>${java.home}/bin/jpackage</executable>
			                <arguments>
			                  <argument>--type</argument>
			                  <argument>exe</argument> <!-- For Windows -->
			                  <argument>--input</argument>
			                  <argument>${project.build.directory}</argument>
			                  <argument>--dest</argument>
			                  <argument>${project.build.directory}/installer</argument>
			                  <argument>--name</argument>
			                  <argument>${project.artifactId}</argument>
			                  <argument>--main-jar</argument>
			                  <argument>${project.build.finalName}.jar</argument>
			                  <argument>--main-class</argument>
			                  <argument>com.angus.xliff.swing.XliffSwingUI</argument>
			                  <argument>--app-version</argument>
			                  <argument>${project.version}</argument>
			                  <argument>--java-options</argument>
			                  <argument>-Xmx512m</argument>
			                </arguments>
			              </configuration>
			            </execution>
			          </executions>
			        </plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>